--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,7 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules/
+/**/node_modules/
 jspm_packages/
 
 # TypeScript v1 declaration files
@@ -69,14 +69,14 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
+**/.env
 .env.test
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 
 # Next.js build output
-.next
+**/.next
 
 # Nuxt.js build / generate output
 .nuxt
@@ -102,3 +102,6 @@ dist
 
 # TernJS port file
 .tern-port
+
+
+
